fix problem with sign in and get started pages on firefox

--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -8,7 +8,6 @@
 
 #sign-in-container {
     margin-top: 137px;
-    height: 50%;
     width: 50%;
     background-color: #FFFFFF;
 }
